tests/samples/negative/traits/trait_impl_unknown_trait.ax
module trait_impl_unknown_trait;

struct File {
    handle: i32;
}

impl Missing for File {
    fn read(self: &File) -> i32 {
        return 1;
    }
}

fn main() -> i32 {
    return 0;
}
